Fix mobile nav menu z-index bug

--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -4,6 +4,7 @@
   position: fixed;
   display: flex;
   justify-content: center;
+  z-index: 10;
 }
 
 .header-container {
@@ -136,6 +137,7 @@
     top: 50px;
     left: 0;
     width: 100vw;
+    z-index: 10;
   }
 
   .nav[aria-hidden="true"] .nav-list__link {
